--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 SQLAlchemy==1.3.5
-Flask_SQLAlchemy==2.4.0
-PyMySQL==0.9.3
 Flask_Cors==3.0.8
+Flask_RESTful==0.3.7
 Flask==1.0.2
+Flask_SQLAlchemy==2.4.0
