--- a/app.cfg
+++ b/app.cfg
@@ -3,5 +3,6 @@ SQLALCHEMY_ECHO = False
 SQLALCHEMY_TRACK_MODIFICATIONS = False
 SQLALCHEMY_COMMIT_ON_TEARDOWN = True
 SECRET_KEY = 'super secret key'
+SESSION_TYPE = 'sqlalchemy'
 DEBUG = True
 JSON_AS_ASCII = False
