--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-SQLAlchemy==1.3.5
-Flask_Cors==3.0.8
-Flask_RESTful==0.3.7
+Flask_Session==0.3.1
 Flask==1.0.2
 Flask_SQLAlchemy==2.4.0
+SQLAlchemy==1.3.5
+requests==2.18.4
+Flask_RESTful==0.3.7
+Flask_Cors==3.0.8
+pytest==5.2.1
